# torch_proj

./: README.md
libtorch_proj/example-app/: CMakeLists.txt  example-app.cpp
libtorch_proj/libtorch-examples/: CMakeLists.txt
libtorch_proj/libtorch-examples/convnet/: CMakeLists.txt  main.cpp
libtorch_proj/libtorch-examples/convnet/include/: convnet_classifier.hpp
libtorch_proj/libtorch-examples/linear-regression/: CMakeLists.txt  main.cpp
libtorch_proj/libtorch-examples/logistic-regression/: CMakeLists.txt  main.cpp
libtorch_proj/libtorch-examples/multi-layered-perceptron/: CMakeLists.txt  main.cpp
pytorch_proj/: test.py
